Add teams endpoint
